@@ -51,6 +51,7 @@
 		</div>
 		<div class="lmsPingControls">
 			<form id="params">
+				<input type="hidden" name="interface" value="{$interface}">
 				<input type="hidden" name="ipaddr" value="{$ipaddr}">
 				<input type="hidden" id="transmitted" name="transmitted" value="0">
 				<input type="hidden" id="received" name="received" value="0">
