@@ -72,6 +72,7 @@ version ? (????-??-??):
   - possibility to show selected device or node on map [chilan]
   - we can send sms to any phone number from outside database [chilan]
   - can send any sms to selected users [chilan]
+  - added %if substitution symbol for interface name [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
